--- a/css/main.css
+++ b/css/main.css
@@ -560,3 +560,7 @@ font-size:;
                                 height: 100%;
                                 top: 0;
                                 left: 0;}
+
+input.hidden  {
+    display: none;
+}
